force-app/main/default/objects/AP_Pivots__c/AP_Pivots__c.object-meta.xml
<CustomObject>
    <description>This is to hold up the performance comparison measure at monthly vs VLY and yearly comparisons</description>
    <label>AP Insights</label>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>AP Pivots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>