force-app/main/default/objects/AP_Pivots__c/fields/BSP_Dom_YTD_LY__c.field-meta.xml
<CustomField>
    <fullName>BSP_Dom_YTD_LY__c</fullName>
    <label>BSP Dom (YTD) (LY)</label>
    <summarizedField>Agency_Performance__c.Reported_Value_LY__c</summarizedField>
    <summaryFilterItems>
        <field>Agency_Performance__c.Measure_Type__c</field>
        <operation>equals</operation>
        <value>BSP</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Agency_Performance__c.LY_Vs_TY__c</field>
        <operation>equals</operation>
        <value>TY</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Agency_Performance__c.Network__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Agency_Performance__c.LY_exclude__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Agency_Performance__c.AP_Insights_Link__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>