force-app/main/default/objects/AP_Pivots__c/fields/BSP_MAT_DOM_VLY__c.field-meta.xml
<CustomField>
    <fullName>BSP_MAT_DOM_VLY__c</fullName>
    <formula>IF (  BSP_MAT_Dom_LY__c !=0, (  BSP_MAT_Dom_TY__c  / BSP_MAT_Dom_LY__c )-1, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSP (MAT) DOM VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>