force-app/main/default/objects/AP_Pivots__c/fields/BSP_MAT_Intl_TY__c.field-meta.xml
<CustomField>
    <fullName>BSP_MAT_Intl_TY__c</fullName>
    <label>BSP (MAT) Intl TY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>