force-app/main/default/objects/AP_Pivots__c/fields/BSP_MAT_TY__c.field-meta.xml
<CustomField>
    <fullName>BSP_MAT_TY__c</fullName>
    <formula>BSP_MAT_Dom_TY__c  +   BSP_MAT_Intl_TY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSP (MAT) (TY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>