force-app/main/default/objects/AP_Pivots__c/fields/BSP_YTD_LY__c.field-meta.xml
<CustomField>
    <fullName>BSP_YTD_LY__c</fullName>
    <formula>BSP_Dom_YTD_LY__c  +  BSP_Intl_YTD_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSP (YTD) (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>