force-app/main/default/objects/AP_Pivots__c/fields/BSP_YTD_VLY__c.field-meta.xml
<CustomField>
    <fullName>BSP_YTD_VLY__c</fullName>
    <formula>IF( BSP_YTD_LY__c !=0,( BSP_YTD_TY__c / BSP_YTD_LY__c )-1,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BSP (YTD) VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>