force-app/main/default/objects/AP_Pivots__c/fields/Corp_Revenue_Intl_LY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Revenue_Intl_LY__c</fullName>
    <label>Corp Revenue Intl LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>