force-app/main/default/objects/AP_Pivots__c/fields/Corp_Revenue_Intl_VLY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Revenue_Intl_VLY__c</fullName>
    <formula>IF (  Corp_Revenue_Intl_LY__c  !=0, (  Corp_Revenue_Intl_TY__c  / Corp_Revenue_Intl_LY__c )-1, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Revenue Intl VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>