force-app/main/default/objects/AP_Pivots__c/fields/Corp_Revenue_Overall_TY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Revenue_Overall_TY__c</fullName>
    <formula>Corp_Revenue_Dom_TY__c  +  Corp_Revenue_Intl_TY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Revenue Overall TY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>