force-app/main/default/objects/AP_Pivots__c/fields/Corp_Share_Intl_TY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Share_Intl_TY__c</fullName>
    <description>Corp Share Intl TY</description>
    <label>Corp Share Intl TY</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>