force-app/main/default/objects/AP_Pivots__c/fields/Corp_Share_Intl_VLY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Share_Intl_VLY__c</fullName>
    <formula>(  Corp_Share_Intl_TY__c   -   Corp_Share_Intl_LY__c  )*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Share Intl VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>