force-app/main/default/objects/AP_Pivots__c/fields/Corp_Share_Overall_LY__c.field-meta.xml
<CustomField>
    <fullName>Corp_Share_Overall_LY__c</fullName>
    <description>Corp Share Overall LY</description>
    <label>Corp Share Overall LY</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>