force-app/main/default/objects/AP_Pivots__c/fields/Corp_Share_Overall_VLY_Trend__c.field-meta.xml
<CustomField>
    <fullName>Corp_Share_Overall_VLY_Trend__c</fullName>
    <formula>IF(  Corp_Share_Overall_VLY__c  != 0, 
IF( 
(Corp_Share_Overall_VLY__c &gt; 0), 
LEFT((Text(Corp_Share_Overall_VLY__c)),5)+ &quot; &quot; +IMAGE(&quot;/resource/Green_up&quot;, &quot;Up&quot;), 
IF( 
(Corp_Share_Overall_VLY__c &lt;0), 
LEFT((Text(Corp_Share_Overall_VLY__c)),5)+ &quot; &quot;+IMAGE(&quot;/resource/Red_Down&quot;, &quot;Down&quot;), 
LEFT((Text(Corp_Share_Overall_VLY__c)),5)+ &quot; &quot;+IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
) 
), 
Text(Corp_Share_Overall_VLY__c)+ &quot; &quot;+IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corp Share Overall VLY Trend</label>
    <type>Text</type>
</CustomField>