force-app/main/default/objects/AP_Pivots__c/fields/FY_Month__c.field-meta.xml
<CustomField>
    <fullName>FY_Month__c</fullName>
    <formula>Month__c &amp; &quot;-&quot; &amp;  Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Month</label>
    <type>Text</type>
</CustomField>