force-app/main/default/objects/AP_Pivots__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <length>15</length>
    <type>Text</type>
</CustomField>