force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_Intl_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_Intl_VLY__c</fullName>
    <formula>(QF_MS_YTD_Intl_TY__c -   QF_MS_YTD_Intl_LY__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (Intl) VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>