force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_Intl_VLY_Trend__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_Intl_VLY_Trend__c</fullName>
    <formula>IF( QF_MS_Intl_VLY__c != 0, 
IF( 
(QF_MS_Intl_VLY__c &gt; 0), 
LEFT((Text(QF_MS_Intl_VLY__c)),5)+ &quot;  &quot; +IMAGE(&quot;/resource/Green_up&quot;, &quot;Up&quot;), 
IF( 
(QF_MS_Intl_VLY__c &lt;0), 
LEFT((Text(QF_MS_Intl_VLY__c)),5)+ &quot;  &quot; +IMAGE(&quot;/resource/Red_Down&quot;, &quot;Down&quot;), 
LEFT((Text(QF_MS_Intl_VLY__c)),5)+ &quot;  &quot; +IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
) 
), 
LEFT((Text(QF_MS_Intl_VLY__c)),5)+ &quot;  &quot; +IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (Intl) VLY Trend</label>
    <type>Text</type>
</CustomField>