force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_MAT_DOM_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_MAT_DOM_LY__c</fullName>
    <formula>IF ( BSP_MAT_Dom_LY__c &gt;0, ( QF_Plate_MAT_DOM_LY__c/ BSP_MAT_Dom_LY__c), -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (MAT) DOM LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>