force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_YTD_Dom_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_YTD_Dom_LY__c</fullName>
    <formula>IF ( BSP_Dom_YTD_LY__c &gt;0, ( QF_Plate_Dom_YTD_LY__c/ BSP_Dom_YTD_LY__c), -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (YTD) Dom LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>