force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_YTD_TY__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_YTD_TY__c</fullName>
    <formula>IF( BSP_YTD_TY__c &gt; 0,  QF_Plate_YTD_TY__c  / BSP_YTD_TY__c,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (YTD) TY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>