force-app/main/default/objects/AP_Pivots__c/fields/QF_MS_YTD_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_MS_YTD_VLY__c</fullName>
    <formula>(QF_MS_YTD_TY__c  -  QF_MS_YTD_LY__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% QF MS (YTD) VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>