force-app/main/default/objects/AP_Pivots__c/fields/QF_Plate_YTD_TY__c.field-meta.xml
<CustomField>
    <fullName>QF_Plate_YTD_TY__c</fullName>
    <formula>QF_Plate_Dom_YTD_TY__c  +  QF_Plate_Intl_YTD_TY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Plate (YTD) (TY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>