force-app/main/default/objects/AP_Pivots__c/fields/QF_Plate_YTD_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_Plate_YTD_VLY__c</fullName>
    <formula>IF ( QF_Plate_YTD_LY__c != 0, ( QF_Plate_YTD_TY__c / QF_Plate_YTD_LY__c)-1,-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Plate (YTD) VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>