force-app/main/default/objects/AP_Pivots__c/fields/QMR_MAT_DOM_TY__c.field-meta.xml
<CustomField>
    <fullName>QMR_MAT_DOM_TY__c</fullName>
    <label>QMR (MAT) DOM TY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>