force-app/main/default/objects/AP_Pivots__c/fields/QMR_MAT_LY__c.field-meta.xml
<CustomField>
    <fullName>QMR_MAT_LY__c</fullName>
    <formula>QMR_MAT_DOM_LY__c  +  QMR_MAT_Intl_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QMR (MAT) LY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>