force-app/main/default/objects/AP_Pivots__c/fields/QMR_YTD_LY__c.field-meta.xml
<CustomField>
    <fullName>QMR_YTD_LY__c</fullName>
    <formula>QMR_Dom_YTD_LY__c  +  QMR_Intl_YTD_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QMR (YTD) (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>