force-app/main/default/objects/AP_Pivots__c/fields/QMR_YTD_VLY__c.field-meta.xml
<CustomField>
    <fullName>QMR_YTD_VLY__c</fullName>
    <formula>IF(  QMR_YTD_LY__c != 0, ( QMR_YTD_TY__c / QMR_YTD_LY__c)-1, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QMR (YTD) VLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>