force-app/main/default/objects/AP_Pivots__c/listViews/Flight_Centre_Brand_and_Portfolio.listView-meta.xml
<ListView>
    <fullName>Flight_Centre_Brand_and_Portfolio</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
    <columns>NAME</columns>
    <columns>Account_Link__c</columns>
    <columns>QF_MS_MAT_TY__c</columns>
    <columns>QF_MS_MAT_VLY__c</columns>
    <columns>QF_MS_YTD_TY__c</columns>
    <columns>QF_MS_YTD_VLY__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh2,a1D900000085Jdk</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh3,a1D9000000219k5</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh4</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh5</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RXeY,a1D90000004RThB</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh6,a1D900000098qQZ</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh7,a1D90000004RThD</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh8,a1D90000004RThE</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RTh9,a1D90000004RThF</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>a1D90000004RThA</value>
    </filters>
    <label>Flight Centre Brand and Portfolio</label>
</ListView>